[package]
name = "finiterain"
version = "0.1.0"
authors = ["__faramir"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
num-rational = "0.3"
thiserror = "1.0"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"