[package]
name = "t3z0s_rs"
version = "0.1.0"
authors = ["Daniel Fiala <freelancer@meave.biz>"]
edition = "2018"

[lib]
name = "t3z0s_rs"
path = "src/lib.rs"
crate-type = ["staticlib"]
# Dynamic library has more complicated linking, let'd disable it now...
#crate-type = ["staticlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"
crypto = { version="*", git = "https://github.com/hagrid-the-developer/tezedge" }
networking = { version="*", git = "https://github.com/hagrid-the-developer/tezedge" }
tezos_messages = { version="*", git = "https://github.com/hagrid-the-developer/tezedge" }
tezos_encoding = { version="*", git = "https://github.com/hagrid-the-developer/tezedge" }
storage = { version = "*", git = "htps://github.com/hagrid-the-developer/tezedge" }